--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX / UI Designer</div></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-id">
           <ul id="navi-menu" class="nav navbar-nav">
@@ -52,23 +52,23 @@
       </div>
     </div>
 
-    <div class="container">
+    <div id="section_about_me" class="container">
       <div class="row">
-        <div class="col-xs-7">
-          <h1 style="font-size:50px; margin-left:2%;">Hello,</h1>
-          <h4 style="color:#4d4d4d;width:92%; margin-left:8%; font-weight:300; margin-bottom:50px;">My name is Amber Lin. I have recently graduated from University of Michigan, School of Information with Human Computer Interaction (HCI) and Library and Information Science (LIS) specialization. Currently, I am seeking a full-time position as an UX designer or researcher.
+        <div class="col-sm-7 col-xs-12">
+          <h1>Hello,</h1>
+          <h4>My name is Amber Lin. I graduated from University of Michigan, School of Information with Human Computer Interaction (HCI) and Library and Information Science (LIS) specialization. Currently, I'm a UX Designer at Alliance Inspection Management.
           </br>
           </br>
-          I am passionate about observing people. I love to observe their behavior, understand their thoughts, and further design solutions in response to their needs. I believe people are the central of good design products; understand our users is the first step for creating the best user experience. Also, I like to collaborate with diverse people, it always helps me learn more ideas and think outside the box.
+          I am passionate about observing people. I love to observe their behavior, understand their thoughts, and further design solutions in response to their needs. I believe people are the core of making good design products; understand our users is the first step of creating the best user experience.
           </br>
           </br>
-          Dancing, music and travel enrich my life. I play piano for more than ten years, and have danced many years since I was in the college. Traveling always inspires me some ideas; meeting with different cultures and people always get my energy back to life. Making some handicraft is my amateur interest, I started years ago and kept on creating new design works.
+          Dancing, music, and travel enrich my life. I've played piano for more than ten years, and I started dancing from college. Both of them make me feel relax. Traveling always inspires me new ideas - meeting with different people and learning their culture is always exciting. Making handicraft is my most recent interest, I started a year ago and kept creating new design works.
           </br>
           </br>
-          If you are interested in knowing more about me, welcome to <a href="attachment/Resume_Amber.pdf" class="link-text" target="_blank">grab my resume</a> and <a href="mailto:yuhlin@umich.edu" class="link-text">contact me</a> !
+          If you are interested in knowing more about me, welcome to <a href="Resume_Amber_Lin.pdf" class="link-text" target="_blank">grab my resume</a> and <a href="mailto:yuhlin@umich.edu" class="link-text">contact me</a> !
           </h4>
         </div>
-        <div class="col-xs-5">
+        <div class="col-sm-5 hidden-xs">
           <img class="about-img" src="img/About.png">
         </div>
       </div>
@@ -76,12 +76,12 @@
 
     <div class="footer">
       <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+        <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
         <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+            <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+            <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
         </div>
       </div>
     </div>
