--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX / UI Designer</div></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-id">
           <ul id="navi-menu" class="nav navbar-nav">
@@ -63,6 +63,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_aimschedule.html';">
               <img src="img/Project/aimschedule_grey.png">
@@ -75,6 +76,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_aimcrm.html';">
               <img src="img/Project/aimcrm_grey.png">
@@ -87,11 +89,23 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="project-item" onclick="location.href='project_aimselfschedule.html';">
+              <img src="img/Project/aimselfschedule_grey.png">
+              <div class="project-intro">
+                <div class="project-intro-text">
+                  <h2>AiM Self-Schedule</h2>
+                  <p>Responsive Web Design</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_giftmasters.html';">
               <img src="img/Project/giftmasters_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>GIFT MASTERS</h2>
                   <p>Web Design</p>
@@ -99,11 +113,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_kono.html';">
               <img src="img/Project/kono_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>KONO</h2>
                   <p>UX Design & Research</p>
@@ -111,11 +125,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_nuwa.html';">
               <img src="img/Project/nuwa_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>NUWA</h2>
                   <p>CHI 2014 Student Design Competition</p>
@@ -123,6 +137,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_clotho.html';">
               <img src="img/Project/clotho_grey.png">
@@ -135,11 +150,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_uxi.html';">
               <img src="img/Project/uxi_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>UXI DESIGN</h2>
                   <p>UX Design & Research Intern</p>
@@ -147,11 +162,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_floc.html';">
               <img src="img/Project/floc_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>FLOC</h2>
                   <p>UX Design & Research Intern</p>
@@ -159,11 +174,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_graphic.html';">
               <img src="img/Project/graphic_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>GRAPHIC DESIGN</h2>
                   <p>Design Works</p>
@@ -171,11 +186,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_map.html';">
               <img src="img/Project/map_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>MAP</h2>
                   <p>Contextual Inquiry</p>
@@ -183,11 +198,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_scistarter.html';">
               <img src="img/Project/scistarter_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>SCISTARTER</h2>
                   <p>Usability Evaluation</p>
@@ -195,11 +210,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_starbucks.html';">
               <img src="img/Project/fieldwork_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>STARBUCKS</h2>
                   <p>Fieldwork Research</p>
@@ -207,11 +222,11 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_infovis.html';">
               <img src="img/Project/infovis_grey.png">
               <div class="project-intro">
-
                 <div class="project-intro-text">
                   <h2>OSCAR BEST PICTURE</h2>
                   <p>Information Visualization</p>
@@ -224,13 +239,12 @@
 
     <div class="footer">
       <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+        <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
           <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
-
         </div>
       </div>
     </div>
