--- a/project_aimcrm.html
+++ b/project_aimcrm.html
@@ -39,7 +39,7 @@
                 </button>
                 <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
                     <div class='logo-name'>Amber Lin</div>
-                    <div class='logo-title'>UX/UI Designer</div>
+                    <div class='logo-title'>UX / UI Designer</div>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-id">
@@ -104,26 +104,22 @@
         <div class="row">
             <div class="col-xs-12 detail-wrap">
                 <h3>Overview</h3>
-                <p>AiM is a new car and pre-owned vehicle inspection company with 1200+ inspectors nationwide. AiM offers both consumer and dealer-based car inspections, and a complete floorplan audit service. Thus, we receive tons of inspection requests
-                    everyday and we need a system to schedule appointment and manage all these requests. AiM CRM is a SaaS web platform for internal users to manage all requests and customer information.</p>
+                <p>AiM is a new car and pre-owned vehicle inspection company with 1200+ inspectors nationwide. AiM offers both consumer and dealer-based car inspections, and a complete floorplan audit service. Thus, we receive tons of inspection requests everyday and we need a system to schedule appointment and manage all these requests. AiM CRM is a SaaS web platform for internal users to manage all requests and customer information.</p>
 
                 <h3>User Group</h3>
-                <p>AiM call center</p>
+                <p>AiM Call center</p>
                 <p>AiM Customer Service Representative</p>
                 <p>AiM Dispatch team</p>
 
                 <h3>Current CRM</h3>
-                <p>Current CRM has three groups of users: Call center users, Customer service representative (CSR) users, and Dispatch users. Call center users receive calls from customers, create new request or schedule appointment; CSR users handle requests
-                    which are unable to schedule or play the bridge role between customers and Dispatch people; and Dispatch users are who have the real control of ClickSoftware (the outsourcing scheduling system), can do all the magic work in the scheduling
-                    system and make sure appointments are sit well for both customers and inspectors.</p>
-                <p>Even though current CRM handles most of the request management work, it has a complicated workflow and confused user interface, which obviously slow the process.</p>
+                <p>Current CRM has three groups of users: Call center users, Customer service representatives (CSR), and Dispatch users. Call center users receive calls from customers, create new request and schedule appointment; CSR handle requests which are unable to schedule or play an important role between customers and Dispatch people; and Dispatch users have the real control of ClickSoftware (the outsourcing scheduling system), can do all the magic work in the scheduling system and make sure appointments are sit well for both customers and inspectors.</p>
+                <p>Even though current CRM can handle most of the request management works, it has a super complicated workflow and confusing user interface, which obviously slow down users' work process.</p>
 
                 <h3>Design Process</h3>
                 <h5>Research</h5>
-                <p>To better understand our users’ current process, we have a weekly meeting with stakeholders to know every part of their workflow, different use cases, and their pain points. Also, I spent sometime playing with the old CRM to know how it
-                    works today.</p>
+                <p>To better understand our users’ current process, we have a weekly meeting with stakeholders to understand every part of their workflow, different use cases, and their pain points. Also, I spent sometime playing with the legacy CRM to know how it works today.</p>
                 <h5>Ideation</h5>
-                <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and draw user flows; and used them as the base of conversation with the team.</p>
+                <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and draw user flows; and used them as a reference for my conversation with the team.</p>
                 <h5>Prototype</h5>
                 <p>After several sketches and discussion with the team, I created hi-fi prototypes for best presenting our ideas to stakeholders.</p>
                 <h5>Development</h5>
@@ -132,7 +128,7 @@
                 <p>The weekly meeting with stakeholders and users is a great opportunity to know how everything goes. After every meeting, the team will come out a to-do list based on users’ feedback, and I will modify my mockups upon request.</p>
 
                 <p class="small">This is an ongoing project that we keep working with product managers, developers, quality assurance engineers, and users to make sure the website is working as what we designed. We also keep adding more features in our weekly deployment.</p>
-
+                
                 <p class="small">Due to confidentiality agreement, I couldn't show my works online. But I’d love to share more details offline.</p>
             </div>
 
@@ -142,11 +138,12 @@
 
     <div class="footer">
         <div class="container">
-            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
             <div class="footer-social">
-                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-
-                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+                <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+                <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
             </div>
         </div>
     </div>
