--- a/project_aiminspect.html
+++ b/project_aiminspect.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX / UI Designer</div></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-id">
           <ul id="navi-menu" class="nav navbar-nav">
@@ -103,18 +103,18 @@
           <h3>User Group</h3>
           <p>AiM car inspectors</p>
           <ul>
-            <li>Different experience level</li>
+            <li>Different experience levels</li>
             <li>Working in diverse circumstances</li>
             <li>Not always tech-savvy</li>
           </ul>
           <h3>Existing Legacy System</h3>
-          <p>AiM has a set of software installed in Toughbook for auto inspection use, which has been using for the past 20 years. Currently, our car inspectors are still using one of the software to collect all the vehicle data, using a digital camera to take required pictures then upload to Toughbook, using a Mifi to connect a printer, and printing out condition report. That is to say, to finish each inspection, inspectors need to carry a chunky Toughbook, a digital camera, a MiFi device, and a printer with them, which is very time-consuming and inefficient.</p>
+          <p>AiM has a set of software installed in Toughbook for vehicle inspection use, which has been using in the past 20 years. Currently, our car inspectors are still using one of the software to collect all the vehicle data, using a digital camera to take all required pictures then upload to Toughbook, using a Mifi to connect to a printer, and printing out a condition report. That is to say, to finish each inspection, inspectors need to carry a chunky Toughbook, a digital camera, a MiFi device, and a printer with them, which is very time-consuming and inefficient.</p>
           <p>The main problems for existing system are:</p>
           <ul>
             <li>Carrying too many devices</li>
             <li>Circling around the car for too many times</li>
             <li>Too many drop down selections for collecting data</li>
-            <li>Did not consider different experience level</li>
+            <li>Did not consider different experience levels</li>
           </ul>
 
           <h3>Design Ideas</h3>
@@ -129,13 +129,13 @@
 
           <h3>Design Process</h3>
           <h5>Be empathetic - field observation</h5>
-          <p>To know more about our car inspectors’ current process, I rode along with several inspectors to observe their workflow and understand their pain points. Also, I spent some time playing with the old system to know how it works today.</p>
+          <p>To know more about our car inspectors’ current process, I rode along with several inspectors to observe their workflow and understand their pain points. Also, I spent some time playing with the legacy system to know how it works today.</p>
           <h5>Ideation</h5>
-          <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and used them as the base of conversation with the team.</p>
+          <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and used them as a reference for my conversation with the team.</p>
           <h5>Prototype</h5>
           <p>After several sketches and discussion with the team, I decided to follow our existing system’s pattern, including vehicle configuration tab, accessories tab, tire tab, damage tab, condition tab, comment tab and summary tab, but regrouping and changing the way how we collect data. I created hi-fi prototypes for each tab and the overall workflow for best presenting our ideas.</p>
           <h5>Evaluation</h5>
-          <p>We conduct UX sessions every two weeks and invite 5 real users and 2 stakeholders in house to validate our ideas. Depending on different stages of the project, sometimes we present ideas to users and let them share their thoughts; sometimes we do user-testing, and let them play with the app on the phone. After each session, we would have a quick debriefing to make sure we gathered all the information we need; and I would modify my mockups based on users’ feedback. We also run several pilots in the fields to validate the workflow.</p>
+          <p>We conduct UX sessions every two weeks and invite 5 real users and 2 stakeholders in house to validate our design ideas. Depending on different stages of the project, sometimes we present ideas to users and let them share their thoughts; sometimes we do user-testing, and let them play with the app on the phone. After each session, we would have a quick debriefing to make sure we gathered all the information we need; and I would modify my mockups based on users’ feedback. We also run several pilots in the fields to validate the workflow.</p>
           <h5>Final design</h5>
           <p>After couple rounds of UX sessions, user testing and modifications, I delivered my final design. My design follows Material Design Guidelines to provide our user a consistent user experience when navigating between different Android apps.</p>
 
@@ -149,12 +149,12 @@
 
     <div class="footer">
       <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+        <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
         <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+          <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+          <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
         </div>
       </div>
     </div>
