--- a/project_aimselfschedule.html
+++ b/project_aimselfschedule.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
 
-    <title>Amber Lin | Kono</title>
+    <title>Amber Lin | AiM Self-Schedule</title>
 
     <!-- Bootstrap core CSS -->
 
@@ -57,15 +57,23 @@
     <div class="container">
         <div class="row row-summary">
             <div class="col-xs-12 summary-title">
-                <h1>Kono</h1>
-                <h3>Quotelet</h3>
+                <h1>AiM Self-Schedule</h1>
+                <h3>Responsive Web Design</h3>
             </div>
             <div class='col-xs-12 summary-item'>
                 <div class="item-title">
                     <p>Date:</p>
                 </div>
                 <div class="item-content">
-                    <p>Oct. 2014 - Feb. 2015</p>
+                    <p>Feb. 2017 - Present</p>
+                </div>
+            </div>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Team:</p>
+                </div>
+                <div class="item-content">
+                    <p>AiM Joint Development Poject (JDP) Team</p>
                 </div>
             </div>
             <div class='col-xs-12 summary-item'>
@@ -73,7 +81,7 @@
                     <p>My Role:</p>
                 </div>
                 <div class="item-content">
-                    <p>UX Designer and Researcher</p>
+                    <p>UX / UI Designer</p>
                 </div>
             </div>
             <div class='col-xs-12 summary-item'>
@@ -81,7 +89,7 @@
                     <p>Skills:</p>
                 </div>
                 <div class="item-content">
-                    <p>Survey Design, Interviews, Diary Study, Prototyping</p>
+                    <p>Prototyping, Wireframing, Sketching, Interaction Map</p>
                 </div>
             </div>
             <div class='col-xs-12 summary-item'>
@@ -89,31 +97,49 @@
                     <p>Tools:</p>
                 </div>
                 <div class="item-content">
-                    <p>Photoshop, Illustrator</p>
+                    <p>Photoshop, Sketch, Experience Design, Balsamiq, Zeplin</p>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-7 detail-wrap">
+            <div class="col-xs-12 detail-wrap">
                 <h3>Overview</h3>
-                <p>This is the project I worked at Kono. We were developing a social tool named Quotelet. Quotelet helps user easily and quickly collect the quote they like, edit and share it with friends when they are reading articles online. So far, it
-                    is a plug-in extension that installed in Google Chrome. However, based on our user research, we were thinking to develop a mobile or a tablet version in the future. </p>
-                <h3>My Responsibilities</h3>
+                <p>AiM is a new car and pre-owned vehicle inspection company with 1200+ inspectors nationwide. We partner with many manufacturers to offer their customers pre-inspections for off-lease vehicles. AiM Self-Schedule is a responsive website for those customers can easily go online to schedule an appointment by themselves.</p>
+
+                <h3>User Group</h3>
+                <p>Customers who have off-lease vehicles</p>
+
+                <h3>Current Workflow</h3>
+                <p>Everyday, our partnered manufacturer's financial company sends us a XML file of off-lease vehicles which are ready for car inspections. It will directly go into our car inspection management system - AiM CRM and show as pending requests. Our Call Center people will pick those requests up and call those customers to schedule appointments for them.</p>
+              
+                <h3>Design Ideas</h3>
+                <p>The current workflow obviously slow and inefficient. It makes internal call center people have to do extra works to communicate back and forth; And, it gives customers less flexibility to match their own schedule and less visibility to see the availabilities.</p>
+                
+                <p>To solve these problems and make both sides' life easier, we decided to:</p>
                 <ul>
-                  <li>Conducted diary studies and interviews to understand target users’ habit of online reading and their experience with Quotelet</li>
-                  <li>Created wireframes and overall interaction flow</li>
+                <li>Create an online platform that customers can easily schedule and manage their appointments</li>
+                <li>Design a responsive website that will look good on all devices</li>
+                <li>Make the whole scheduling process more transparently and efficent</li>
+                <li>Give users more control to pick their desired appointment date and time</li>
                 </ul>
-                <p>I am willing to share more about my work experiences offline!</p>
 
-                <a class='attachment-text' href='http://quotelet.getforge.io/' target="_blank">➢ About Quotelet</a>
+                <h3>Design Process</h3>
+                <h5>Research</h5>
+                <p>To get business requirements and know what our clients' expectation, we had couple meetings with stakeholders and clients to understand every part of their current workflow, different use cases, and their pain points. Also, I spent some time doing research online to see what to make an easy and efficient scheduling process.</p>
+                <h5>Ideation</h5>
+                <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and draw user flows; and used them as a reference for my conversation with the team.</p>
+                <h5>Prototype</h5>
+                <p>After several sketches and discussion with the team, I created hi-fi prototypes for best presenting our ideas to stakeholders and clients.</p>
+                <h5>Development</h5>
+                <p>For this project, we want to get it done as soon as possible. Developers implement my design instantly after getting approval from stakeholders and clients.</p>
+                <h5>Evaluation</h5>
+                <p>The weekly meeting with stakeholders and clients is a great opportunity to know how everything goes. After every meeting, the team will come out a to-do list based on feedbacks, and I will modify my mockups upon request.</p>
 
+                <p class="small">This project is still in developing stage that we keep working with product managers, marketing team, developers, quality assurance engineers, and potential users to make sure the website is working as what we designed. It will be luanching in pilot phase soon.</p>
+
+                <p class="small">Due to confidentiality agreement, I couldn't show my works online. But I’d love to share more details offline.</p>
             </div>
-            <div class="col-xs-5" id="img-section">
-                <div class="img-text-section">
-                    <img class="project-img" src="img/pic/kono_hp.png" />
-                    <p>Quotelet Personal Page</p>
-                </div>
-            </div>
+
         </div>
     </div>
     <!-- /.container -->
@@ -136,6 +162,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
