--- a/project_giftmasters.html
+++ b/project_giftmasters.html
@@ -39,7 +39,7 @@
                 </button>
                 <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
                     <div class='logo-name'>Amber Lin</div>
-                    <div class='logo-title'>UX/UI Designer</div>
+                    <div class='logo-title'>UX / UI Designer</div>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-id">
@@ -95,8 +95,7 @@
         <div class="row">
             <div class="col-xs-12 detail-wrap">
                 <h3>Overview</h3>
-                <p>This is the project I worked with 199 insights, Inc. We were building a website named Gift masters. It is a website which helps people choose gift for their friends or significant other. With completing a short questionnaire, our system
-                    will give the user a list of personalized gift recommendations.</p>
+                <p>This is the project I worked with 199 insights, Inc. We were building a website named Gift masters. It is a website which helps people choose gift for their friends or significant other. With completing a short questionnaire, our system will give the user a list of personalized gift recommendations.</p>
                 <h3>Design Process</h3>
                 <img class="full-width-img" src="img/pic/giftmasters_designprocess.png" />
                 <h3>My Responsibilities</h3>
@@ -126,12 +125,12 @@
 
     <div class="footer">
         <div class="container">
-            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
             <div class="footer-social">
-                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-
-                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+                <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+                <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
             </div>
         </div>
     </div>
