--- a/project_uxi.html
+++ b/project_uxi.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX / UI Designer</div></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-id">
           <ul id="navi-menu" class="nav navbar-nav">
@@ -89,7 +89,7 @@
       <div class="row" >
         <div class="col-xs-7 detail-wrap">
           <h3> </h3>
-          <p>I interned at <a class='link-text' href='http://uxi-design.com/index_en.php' target="_blank"> UXI Design </a> as an UX/UI design and research intern for 2013 summer. UXI is a design company cares about how to create a better user experience and user interface. During my internship, I got involved in multiple projects: I worked with my mentor as a consultant with Microsoft Taiwan UX team to help developers understand and design Windows 8 applications with their user-centered design principles; I brainstormed with the design team and created prototypes for a new tablet operating system design, and further conducted two rounds of user testing to validate our design; I planned stakeholder interviews for initiating the website redesign and built new sitemap.<br>
+          <p>I interned at <a class='link-text' href='http://uxi-design.com/index_en.php' target="_blank"> UXI Design </a> as an UX / UI design and research intern for 2013 summer. UXI is a design company cares about how to create a better user experience and user interface. During my internship, I got involved in multiple projects: I worked with my mentor as a consultant with Microsoft Taiwan UX team to help developers understand and design Windows 8 applications with their user-centered design principles; I brainstormed with the design team and created prototypes for a new tablet operating system design, and further conducted two rounds of user testing to validate our design; I planned stakeholder interviews for initiating the website redesign and built new sitemap.<br>
           </p>
           <p>
           I am willing to share more about my work example and experiences offline!
@@ -106,12 +106,12 @@
 
     <div class="footer">
       <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+        <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
         <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+            <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+            <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
         </div>
       </div>
     </div>
