--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | Resume</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX / UI Designer</div></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-id">
           <ul id="navi-menu" class="nav navbar-nav">
@@ -52,19 +52,19 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <object data="attachment/Resume_Amber Lin.pdf"></object>
-        </div>      
-      </div>  
+          <object data="Resume_Amber_Lin.pdf"></object>
+        </div>
+      </div>
     </div><!-- /.container -->
 
     <div class="footer">
       <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+        <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
         <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+            <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+            <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
         </div>
       </div>
     </div>
