--- a/project_aimschedule.html
+++ b/project_aimschedule.html
@@ -39,7 +39,7 @@
                 </button>
                 <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
                     <div class='logo-name'>Amber Lin</div>
-                    <div class='logo-title'>UX/UI Designer</div>
+                    <div class='logo-title'>UX / UI Designer</div>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-id">
@@ -107,22 +107,21 @@
                 <h3>User Group</h3>
                 <p>AiM car inspectors</p>
                 <ul>
-                    <li>Different experience level</li>
+                    <li>Different experience levels</li>
                     <li>Working in diverse circumstances</li>
                     <li>Not always tech-savvy</li>
                 </ul>
                 <h3>Existing Legacy System</h3>
-                <p>AiM has a set of software installed in Toughbook for auto inspection use, which has been using in the past 20 years. Currently, our car inspectors are still using one of this software in Toughbook to check their daily schedule, look up
-                    appointment detail, and update inspection status.</p>
+                <p>AiM has a set of software installed in Toughbook for vehicle inspection use, which has been using in the past 20 years. Currently, our car inspectors are still using one of this software in Toughbook to check their daily schedule, look up appointment detail, and update inspection status.</p>
                 <p>The main problems for existing system are:</p>
                 <ul>
-                    <li>For all appointments in the same location, the user needs to navigate back and forth to gather information needed</li>
+                    <li>For all appointments in the same location, the user needs to navigate back and forth to gather all information needed</li>
                     <li>No connection between phone and Toughbook</li>
                     <li>Appointment does not update immediately</li>
                 </ul>
 
                 <h3>Design Ideas</h3>
-                <p>Even the main functionalities will stay the same, replacing the existing system by a smart phone and redesigning the user flow will provide a better user experience and let inspectors work more efficiently:</p>
+                <p>Even the main functionalities will stay the same, replacing the existing system by a smart phone and redesigning the user flow will provide a much better user experience and let car inspectors work more efficiently:</p>
                 <ul>
                     <li>Show important data in the primary position</li>
                     <li>Group necessary information together</li>
@@ -132,17 +131,15 @@
 
                 <h3>Design Process</h3>
                 <h5>Be empathetic - field observation</h5>
-                <p>To know more about our car inspectors’ current process, I rode along with several inspectors to observe their workflow and understand their pain points. Also, I spent sometime playing with the existing legacy system to know how it works
-                    today.</p>
+                <p>To know more about our car inspectors’ current process, I rode along with several inspectors to observe their workflow and understand their pain points. Also, I spent sometime playing with the existing legacy system to know how it works today.</p>
                 <h5>Ideation</h5>
-                <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and used them as the base of conversation with the team.</p>
+                <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and used them as a reference for my conversation with the team.</p>
                 <h5>Prototype</h5>
                 <p>After discussing with the team, we narrowed down to 2 ideas that we want to present to users. I created hi-fi prototypes and interaction workflow for best presenting our ideas to users in the UX session.</p>
                 <h5>Evaluation</h5>
-                <p>We conduct UX session every two weeks and invite 5 real users and 2 stakeholders in house to validate our ideas. In the UX session, we would present our ideas and let users share what they like, what they don’t like, and what will make
-                    it better. After each session, we would have a quick debriefing to make sure we gathered all the information we need; and I would modify my mockups based on users’ feedback.</p>
+                <p>We conduct UX session every two weeks and invite 5 real users and 2 stakeholders in house to validate our ideas. In the UX session, we would present our ideas and let users share what they like, what they don’t like, and what will make it better. After each session, we would have a quick debriefing to make sure we gathered all the information we need; and I would modify my mockups based on users’ feedback.</p>
                 <h5>Final design</h5>
-                <p>After couple rounds of UX sessions and modifications, I delivered my final design. My design follows Material Design Guidelines to provide our user a consistent user experience when navigating between different Android apps. </p>
+                <p>After couple rounds of UX sessions and modifications, I delivered my final design. My design follows Material Design Guidelines to provide our user a consistent user experience when navigating between different Android apps.</p>
 
                 <p><small>This is an ongoing project that we keep working with product managers, developers, quality assurance engineers, and users to make sure the app is working as what we designed. We also work on adding more features in the near future.</small></p>
 
@@ -155,12 +152,12 @@
 
     <div class="footer">
         <div class="container">
-            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
             <div class="footer-social">
-                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-
-                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+                <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+                <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
             </div>
         </div>
     </div>
