--- a/project_clotho.html
+++ b/project_clotho.html
@@ -39,7 +39,7 @@
                 </button>
                 <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
                     <div class='logo-name'>Amber Lin</div>
-                    <div class='logo-title'>UX/UI Designer</div>
+                    <div class='logo-title'>UX / UI Designer</div>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-id">
@@ -158,12 +158,12 @@
 
     <div class="footer">
         <div class="container">
-            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <p class="footer-text">All Right Reserved © Amber Lin 2017</p>
             <div class="footer-social">
-                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-
-                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+                <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+                <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
             </div>
         </div>
     </div>
